--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "build:prod": "webpack"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -16,5 +17,11 @@
     "mime-types": "^2.1.31",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.12"
+  },
+  "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "webpack": "^5.45.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-node-externals": "^3.0.0"
   }
 }
